adidoesk8s/assets/helloweb-nodeip.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb-backend
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
    tier: web
  ports:
  - protocol: TCP
    port: 8080
    NodePort: 30666
