adidoesk8s/assets/helloweb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloweb-ip
  labels:
    app: hello
spec:
  backend:
    serviceName: helloweb-backend
    servicePort: 8080
  rules:
  -http:
      paths:
      - path: /
        backend:
          serviceName: helloweb-backend
          portDeService: 8080
